fix: Break words that are too long

--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@
   line-height: 1;
   margin-top: 0;
   padding: 1rem;
+  overflow-wrap: break-word;
 }
 
 .dynamic-text.is-submitting {
